<resources>
    <!-- アプリ全体 -->
    <string name="app_name">AccountBook</string>
    <string name="logoutButton">ログアウト</string>
    <string name="actionBar.leftButtonTitle">＜</string>
    <string name="actionBar.rightButtonTitle">削除</string>
    <!-- 01_登録・ログイン選択画面 -->
    <string name="registerButton">ユーザー登録</string>>
    <string name="loginButton">ログイン</string>
    <!-- 02_登録画面 -->
    <string name="registerActivityTitle">ユーザー登録</string>
    <string name="mailAddressLabel">メールアドレス</string>
    <string name="mailAddressPlaceHolder">メールアドレスを入力してください</string>
    <string name="passwordLabel">パスワード</string>
    <string name="passwordPlaceHolder">パスワードを入力してください</string>
    <string name="birthdayLabel">生年月日</string>
    <string name="birthdayPlaceHolder">生年月日を選択してください</string>
    <string name="birthdaySelectButton">選択</string>
    <string name="agreementLabel">利用規約</string>
    <string name="agreementCheckBoxLabel">利用規約に同意します</string>
    <string name="signUpButton">登録</string>
    <string name="validError.mailAddress.blank">メールアドレスの入力が必要です</string>
    <string name="validError.mailAddress.form">メールアドレスの形式で入力してください</string>
    <string name="validError.password.blank">パスワードの設定が必要です</string>
    <string name="validError.password.length">パスワードは８文字以上で設定してください</string>
    <string name="validError.birthday.blank">生年月日の選択が必要です</string>
    <string name="validError.agreement.false">利用規約に同意しないとアプリはご利用になれません</string>
    <string name="firebaseException.weakPassword">エラー！パスワードが脆弱です</string>
    <string name="firebaseException.invalidMailAddress">エラー！メールアドレスが不正です</string>
    <string name="firebaseException.existedMailAddress">エラー！既に登録済みの可能性があります</string>
    <!-- 03_認証メール送信画面 -->
    <string name="authcodeActivityTitle">メールアドレス確認</string>
    <string name="afterSendingText">メールアドレスの本人確認が完了していません。\n確認メールを送信しましたので、ご確認いただき、掲載のリンクを押下して登録を完了してください。\nその後、ログイン画面から再度ログインしてください。</string>
    <string name="failureSendingText">確認メールの送信に失敗しました。再送ボタンを押してください。</string>
    <string name="afterSendingButtonTitle">ログイン画面へ</string>
    <string name="resendButtonTitle">再送</string>
    <!-- 04_ログイン画面 -->
    <string name="LoginActivityTitle">ログイン</string>
    <string name="signInButton">ログイン</string>
    <!-- 05_入出金明細画面 -->
    <string name="homeActivityTitle">家計簿</string>
    <!-- 06_入手金登録・編集画面 -->
    <string name="TransactionEditActivityTitle">入出金登録・編集</string>
    <string name="balanceTitleLabel">収支</string>
    <string name="incomeRadioButtonTitle">収入</string>
    <string name="expenseRadioButtonTitle">支出</string>
    <string name="categoryTitleLabel">カテゴリ</string>
    <string name="categoryDisplayLabel">カテゴリを選択してください</string>
    <string name="categorySelectButton">選択</string>
    <string name="dateTitleLabel">日付</string>
    <string name="dateDisplayLabel">日付を選択してください</string>
    <string name="dateSelectButton">選択</string>
    <string name="amountTitleLabel">金額</string>
    <string name="unitTitleLabel">円</string>
    <string name="contentTitleLabel">内容</string>
    <string name="transactionRegisterButton">登録</string>
    <string name="validError.balance.null">収支の選択が必要です</string>
    <string name="validError.category.null">カテゴリの選択が必要です</string>
    <string name="validError.date.null">日付の選択が必要です</string>
    <string name="validError.amount.null">金額の入力が必要です</string>
    <string name="validError.content.null">内容の入力が必要です</string>
    <!-- 07_収支画面 -->
    <!-- 共通 -->
    <string name="commonEditTextPlaceHolder">入力してください</string>
</resources>