<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/transactionEditScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/registerTransactionConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".TransactionEditActivity">

            <TextView
                android:id="@+id/balanceTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp"
                android:text="@string/balanceTitleLabel"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/balanceRadioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:gravity="start"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/balanceTextView">

                <RadioButton
                    android:id="@+id/expenseRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expenseRadioButtonTitle"
                    android:textSize="18dp"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/incomeRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/incomeRadioButtonTitle"
                    android:textSize="18dp" />

            </RadioGroup>

            <TextView
                android:id="@+id/balanceErrorLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="40dp"
                android:textAlignment="viewStart"
                android:textColor="@color/errorRed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/balanceRadioGroup" />

            <TextView
                android:id="@+id/categoryTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:text="@string/categoryTitleLabel"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/balanceErrorLabel" />

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/categoryTextView" />

            <TextView
                android:id="@+id/categoryErrorLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="40dp"
                android:textAlignment="viewStart"
                android:textColor="@color/errorRed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/categorySpinner" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:text="@string/dateTitleLabel"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/categoryErrorLabel" />

            <TextView
                android:id="@+id/dateDisplayTextView"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/dateDisplayLabel"
                android:textSize="18sp"
                android:gravity="left|center_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateTextView" />

            <Button
                android:id="@+id/dateSelectButton"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:text="@string/dateSelectButton"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dateDisplayTextView"
                app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

            <TextView
                android:id="@+id/dateErrorLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="40dp"
                android:textAlignment="viewStart"
                android:textColor="@color/errorRed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateDisplayTextView" />

            <TextView
                android:id="@+id/amountTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:text="@string/amountTitleLabel"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateErrorLabel" />

            <EditText
                android:id="@+id/amountEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintEnd_toStartOf="@id/unitTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/amountTextView" />

            <TextView
                android:id="@+id/unitTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="40dp"
                android:text="@string/unitTitleLabel"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="@id/amountEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/amountEditText" />

            <TextView
                android:id="@+id/amountErrorLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="40dp"
                android:textAlignment="viewStart"
                android:textColor="@color/errorRed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/amountEditText" />

            <TextView
                android:id="@+id/contentTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:text="@string/contentTitleLabel"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/amountErrorLabel" />

            <EditText
                android:id="@+id/contentEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contentTextView" />

            <TextView
                android:id="@+id/contentErrorLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="40dp"
                android:textAlignment="viewStart"
                android:textColor="@color/errorRed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contentEditText" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/EditFooterConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        tools:context=".TransactionEditActivity">

        <Button
            android:id="@+id/transactionRegisterButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/transactionRegisterButton"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>